# Neural-Network-Projects-with-Python-Second-Edition

./: .gitignore  README.md
Chapter1/: calc_dist.py  calc_optim.py  gcd.py  points.py  pyproject.toml
Chapter1/tests/: test_gcd.py
Chapter2/: 00-keras-test.ipynb  01-points_eda.ipynb  02-points_scikit.py  03-points_scikit.ipynb  04-points_keras.py  05-iris_eda.ipynb  06-iris_torch.py  07-iris_jax.py  data_iris.py  data_points.py  pyproject.toml
Chapter2/tests/: test_data_iris.py  test_data_points.py
Chapter3/: 01-eda.ipynb  02-scikit.py  03-keras.py  04-keras-check.ipynb  data.py  pyproject.toml
Chapter4/: 01-eda.ipynb  02-features.ipynb  03-train.py  04-model-check.ipynb  05-route-features.ipynb  06-osrm-features.py  07-osrm-join.ipynb  data.py  pyproject.toml
Chapter4/osrm/: run.sh
