[project]
name = "nnp-2ed-ch2"
version = "0.1.0"
description = "Chapter 2"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "huggingface-hub>=1.8.0",
    "jax~=0.9.2",
    "jupyterlab>=4.5.7",
    "kaleido>=1.2.0",
    "keras~=3.13.2",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "tabulate>=0.10.0",
    "tensorflow~=2.21.0",
    "timer-context~=1.1.1",
    "torch~=2.10.0",
]
