[project]
name = "nnp-2ed-ch4"
version = "0.1.0"
description = "Neural Network Projects 2nd edition examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "jupyterlab>=4.5.9",
    "kaggle>=2.2.0",
    "kagglehub[pandas-datasets]==1.0.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polyline>=2.0.4",
    "pyarrow>=24.0.0",
    "pyarrow-stubs>=20.0.0.20251215",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "setuptools==81.0.0",
    "tabulate>=0.10.0",
    "tensorboard>=2.20.0",
    "timer-context~=1.1.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
